--- a/Starter-file/app/index.html
+++ b/Starter-file/app/index.html
@@ -31,15 +31,10 @@
       <a href="#home" class="nav-links active">Accueil</a>
     </li>
     <li class="nav-item">
-      <a href="#language" class="nav-links">Francais</a>
-    </li>
-    
-    
-   
+      <a href="#langue" class="nav-links">Francais</a>
+    </li> 
   </ul>
 </nav>
-
-
 
 <div class="info">
 <div class="info_med" >
