--- a/Starter-file/app/index.html
+++ b/Starter-file/app/index.html
@@ -131,9 +131,11 @@
               <p>la plateforme téléphonique- Allo 300</p>
               <h4>300</h4>
             </div>
+            
              <div class="footer__col-3">
-            <label class="btn">Accueil</label>
-            <label class="btn">Conseils</label>
+              <a href="#" class="footer-links">Accueil</a>
+              <a href="#" class="footer-links">Conseils</a>
+          
             </div>
             <div class="buttom-line"></div>
           </div>
