some modifications added

--- a/Starter-file/app/index.html
+++ b/Starter-file/app/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <section class="top-nav">
-  <a href="#" class="logo">LOGO</a>
+  <img src="images/png/logo.png" width="36" >
   <div class='nav-button'></div>
 </label>
   <ul class="nav">
