conseils page completed

--- a/Starter-file/app/conseils.html
+++ b/Starter-file/app/conseils.html
@@ -34,43 +34,43 @@
         <div class="card">
           <div class="card-1">
             <img src="images/png/Calque -5.png"width="200" > 
-            <h3>Saluez sans serrer la main, n'embrassez personne</h3>
+            <h4>Saluez sans serrer la main, n'embrassez personne</h4>
           </div>
         </div>
         <div class="card">
           <div class="card-2">
             <img src="images/png/Calque -4.png"width="120" >
-            <h3>Lavez-vous très régulièrement les mains</h3>
+            <h4>Lavez-vous très régulièrement les mains</h4>
           </div>
         </div>
         <div class="card">
           <div class="card-3">
             <img src="images/png/Calque -3.png"width="110" >
-          <h3>Portez un masque si vous êtes malade</h3>
+          <h4>Portez un masque si vous êtes malade</h4>
           </div>
         </div>
         <div class="card">
           <div class="card-4">
             <img src="images/png/cough-svgrepo-com.png"width="150" >
-         <h3>Toussez ou éternuez dans votre coude ou dans un mouchoir</h3>
+         <h4>Toussez ou éternuez dans votre coude ou dans un mouchoir</h4>
           </div>
         </div>
         <div class="card">
             <div class="card-5">
               <img src="images/png/Fichier 7@2x.png" width="150" >
-           <h3>Ne touchez pas vos yeux, votre bouche <br>ou votre nez</h3>
+           <h4>Ne touchez pas vos yeux, votre bouche ou votre nez</h4>
             </div>
           </div>
           <div class="card">
             <div class="card-6">
               <img src="images/png/Calque -17.png"width="140" >
-           <h3>Évitez les rassemblements</h3>
+           <h4>Évitez les rassemblements</h4>
             </div>
           </div>
           <div class="card">
             <div class="card-7">
               <img src="images/png/icon-house-1.png" width="150" >
-           <h3>Restez chez vous, évitez tout contact avec les autres</h3>
+           <h4>Restez chez vous, évitez tout contact avec les autres</h4>
             </div>
           </div>
 
@@ -149,12 +149,7 @@
                         
                       </div>
                     </section>
-
-
-
-
-
-    
+ 
     <footer class="footer">
         <div class="footer__col-1">
           <img src="images/png/logo.png">
