--- a/Starter-file/app/conseils.html
+++ b/Starter-file/app/conseils.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--links-->
+    <!--links-->
+<link rel="shortcut icon" href="images/SVG/logo__sante-1.svg" type="image/x-icon"> 
+<title>Covid-19</title>
+<!--build:css csss/styles.min.css-->
 <link rel="stylesheet" href="css/styles.css" type="text/css" />
+<!--endbuild-->
+
     <title>Conseils</title>
 </head>
 <body>
@@ -18,7 +24,7 @@
             <a href="#Conseils" class="nav-links">Conseils</a>
           </li>
           <li>
-            <a href="#home" class="nav-links">Accueil</a>
+            <a href="index.html" class="nav-links">Accueil</a>
           </li>
           <li>
             <a href="#langue" class="nav-links"></a> <img src="https://demo.neontheme.com/assets/images/flags/flag-fr.png" width="20">
@@ -165,7 +171,7 @@
         </div>
         
          <div class="footer__col-3">
-          <a href="#" class="footer-links">Accueil</a>
+          <a href="index.html" class="footer-links">Accueil</a>
           <a href="#" class="footer-links">Conseils</a>
       
         </div>
