--- a/Starter-file/app/index.html
+++ b/Starter-file/app/index.html
@@ -14,7 +14,7 @@
 <body>
 <section class="top-nav">
   <img src="images/png/logo.png" width="36" >
-  <div class='nav-button'></div>
+  <!-- <div class='nav-button'></div> -->
   <ul class="nav">
     <li>
       <a href="conseils.html" class="nav-links">Conseils</a>
