--- a/Starter-file/app/index.html
+++ b/Starter-file/app/index.html
@@ -48,7 +48,7 @@
           Faites le test pour répondre en citoyen éclairé selon vos <br>
           symptômes.
         </p>
-        <a href="#"><button type="button" class="btn btn-outline-secondary btn-lg">Démarrer le test</button></a>
+        <a href="pagetest.html"><button type="button" class="btn btn-outline-secondary btn-lg">Démarrer le test</button></a>
       </div>
    
 <div class="image" >
@@ -114,7 +114,7 @@
               <img src="images/png/1f637.png">
             </div>
             <div>
-              <a href="#"><button type="button" class="btn btn-outline-secondary btn-lg">Démarrer le test</button></a>
+              <a href="pagetest.html"><button type="button" class="btn btn-outline-secondary btn-lg">Démarrer le test</button></a>
             </div> 
             
           </div>
