some modifications needed

--- a/Starter-file/app/pagetest.html
+++ b/Starter-file/app/pagetest.html
@@ -34,18 +34,18 @@
 
 <section class="row">
     <div class="md-stepper-horizontal ">
-        <div class="md-step active-yellow ">
-          <div class="md-step-circle"><span>1</span></div>
+        <div class="md-step active ">
+          <div class="md-step-circle"></div>
           <div class="md-step-title">Informations
     </div>
     
         </div>
         <div class="md-step active ">
-          <div class="md-step-circle"><span>2</span></div>
+          <div class="md-step-circle"></div>
           <div class="md-step-title">Questionnaire</div>
         </div>
         <div class="md-step active">
-          <div class="md-step-circle"><span>3</span></div>
+          <div class="md-step-circle"></div>
           <div class="md-step-title">	
     Résultats</div>
         </div>
