adiing some modification

--- a/Starter-file/app/pagetest.html
+++ b/Starter-file/app/pagetest.html
@@ -94,7 +94,7 @@
   </div>
 
   <div class="testbtn">
-    <button  id="prevBtn" onclick="next(-1)">Prev</button>	
+    <button  id="prevBtn" onclick="next(-1)">Présédent</button>		
     <button  id="nextBtn" onclick="next(1)">Démarrer le test</button>
   </div>
   </div>
