--- a/Starter-file/app/pagetest.html
+++ b/Starter-file/app/pagetest.html
@@ -107,7 +107,7 @@
                 <div class="mm-survey-page" data-page="3">
                   <div class="mm-survery-content">
                     <div class="mm-survey-question">
-                     <h1>Ces derniers jours, avez-vous une toux ou une augmentation de votre toux habituelle ?</h1>
+                     <h1>Ces derniers jours, avez-vous une toux ou une augmentation de votre <br>toux habituelle ?</h1>
                     </div>
                     <div class="mm-survey-item">
                       <input type="radio" id="radio3" data-item="3" name="radio3" value="" />
@@ -121,7 +121,7 @@
                 <div class="mm-survey-page" data-page="4">
                   <div class="mm-survery-content">
                     <div class="mm-survey-question">
-                      <h1>Avez-vous eu des courbatures inhabituelles au cours des derniers jours ?</h1>
+                      <h1>Avez-vous eu des courbatures inhabituelles au cours des derniers jours <br>?</h1>
                     </div>
                     <div class="mm-survey-item ">
                       <input type="radio" id="oui" name="oui"> 
@@ -162,7 +162,7 @@
                 <div class="mm-survey-page" data-page="7">
                   <div class="mm-survery-content">
                     <div class="mm-survey-question">
-                      <h1>Ces derniers jours, avez-vous une fatigue inhabituelle qui vous a obligé à vous reposer plus de la moitié de la journée ?</h1>
+                      <h1>Ces derniers jours, avez-vous une fatigue inhabituelle qui vous a <br>obligé à vous reposer plus de la moitié de la journée ?</h1>
                     </div>
                     <div class="mm-survey-item ">
                       <input type="radio" id="oui" name="oui"> 
@@ -175,7 +175,7 @@
                 <div class="mm-survey-page" data-page="8">
                   <div class="mm-survery-content">
                     <div class="mm-survey-question">
-                      <h1>Avez-vous des difficultés importantes pour vous alimenter ou boire depuis plus de 24h ?</h1>
+                      <h1>Avez-vous des difficultés importantes pour vous alimenter ou boire <br>depuis plus de 24h ?</h1>
                     </div>
                     <div class="mm-survey-item ">
                       <input type="radio" id="oui" name="oui"> 
@@ -188,7 +188,7 @@
                 <div class="mm-survey-page" data-page="9">
                   <div class="mm-survery-content">
                     <div class="mm-survey-question">
-                      <h1>Dans les dernières 24 heures, avez-vous noté un manque de souffle inhabituel lorsque vous parlez ou faites un petit effort ?</h1>
+                      <h1>Dans les dernières 24 heures, avez-vous noté un manque de souffle <br>inhabituel lorsque vous parlez ou faites un petit effort ?</h1>
                     </div>
                     <div class="mm-survey-item ">
                       <input type="radio" id="oui" name="oui"> 
@@ -218,7 +218,7 @@
                 <div class="mm-survey-page" data-page="11">
                   <div class="mm-survery-content">
                     <div class="mm-survey-question">
-                      <h1>Quel est votre âge ? Ceci, afin de calculer un facteur de risque spécifique.</h1>
+                      <h1>Quel est votre âge ? Ceci, afin de calculer un facteur de risque <br>spécifique.</h1>
                     </div>
                     <div class="mm-survey-item">
                       <input  type="number" placeholder="15-110 " max=110 min=15  class="deg">
@@ -229,7 +229,7 @@
                 <div class="mm-survey-page" data-page="12">
                   <div class="mm-survery-content">
                     <div class="mm-survey-question">
-                      <h1>Quel est votre poids ? Afin de calculer l’indice de masse corporelle qui est un facteur influençant le risque de complications de l’infection.</h1>
+                      <h1>Quel est votre poids ? Afin de calculer l’indice de masse corporelle qui<br> est un facteur influençant le risque de complications de l’infection.</h1>
                       </div>
                       <div class="mm-survey-item">
                           <input  type="number" placeholder="20-250 " max=250 min=20  class="deg">
@@ -240,7 +240,7 @@
                 <div class="mm-survey-page" data-page="13">
                   <div class="mm-survery-content">
                     <div class="mm-survey-question">
-                      <h1>Quelle est votre taille ? Afin de calculer l’indice de masse corporelle qui est un facteur influençant le risque de complications de l’infection.</h1>
+                      <h1>Quelle est votre taille ? Afin de calculer l’indice de masse corporelle qui<br> est un facteur influençant le risque de complications de l’infection.</h1>
                       </div>
                       <div class="mm-survey-item">
                           <input  type="number" placeholder="80-250 " max=250 min=80 class="deg">
@@ -251,7 +251,7 @@
                 <div class="mm-survey-page" data-page="14">
                   <div class="mm-survery-content">
                     <div class="mm-survey-question">
-                      <h1>Avez-vous de l’hypertension artérielle mal équilibrée ? Ou avez-vous une maladie cardiaque ou vasculaire ? Ou prenez-vous un traitement à visée cardiologique ?</h1>
+                      <h1>Avez-vous de l’hypertension artérielle mal équilibrée ? Ou avez-vous <br>une maladie cardiaque ou vasculaire ? Ou prenez-vous un traitement à<br> visée cardiologique ?</h1>
                     </div>
                     <div class="mm-survey-item ">
                       <input type="radio" id="14" name="oui"> 
@@ -290,7 +290,7 @@
                 <div class="mm-survey-page" data-page="17">
                   <div class="mm-survery-content">
                     <div class="mm-survey-question">
-                      <h1>Avez-vous une maladie respiratoire ? Ou êtes-vous suivi par un pneumologue ?</h1>
+                      <h1>Avez-vous une maladie respiratoire ? Ou êtes-vous suivi par un<br> pneumologue ?</h1>
                     </div>
                     <div class="mm-survey-item ">
                       <input type="radio" id="oui" name="oui"> 
@@ -344,7 +344,7 @@
                 <div class="mm-survey-page" data-page="21">
                   <div class="mm-survery-content">
                     <div class="mm-survey-question">
-                      <h1>Avez-vous une maladie connue pour diminuer vos défenses immunitaires ?</h1>
+                      <h1>Avez-vous une maladie connue pour diminuer vos défenses <br>immunitaires ?</h1>
                     </div>
                     <div class="mm-survey-item ">
                       <input type="radio" id="oui" name="oui"> 
@@ -357,7 +357,7 @@
                 <div class="mm-survey-page" data-page="22">
                   <div class="mm-survery-content">
                     <div class="mm-survey-question">
-                      <h1>Prenez-vous un traitement immunosuppresseur ? C’est un traitement qui diminue vos défenses contre les infections. Voici quelques exemples : corticoïdes, méthotrexate, ciclosporine, tacrolimus, azathioprine, cyclophosphamide (liste non exhaustive).</h1>
+                      <h1>Prenez-vous un traitement immunosuppresseur ? C’est un traitement <br>qui diminue vos défenses contre les infections. Voici quelques <br> exemples : corticoïdes, méthotrexate, ciclosporine, tacrolimus,<br> azathioprine, cyclophosphamide (liste non exhaustive).</h1>
                     </div>
                     <div class="mm-survey-item ">
                       <input type="radio" id="oui" name="oui"> 
